# RepoRover-AI

./: .env.example  .gitignore  CLOUD_RUN_DEPLOYMENT.md  GRAPH_PRIMITIVES_CHECKLIST.md  GRAPH_PRIMITIVES_TEST_RESULTS.md  LICENSE  README.md  TODO.md  cloudbuild.yaml  delete_firestore_doc.py  eslint.config.mjs  index.html  index.tsx  next.config.ts  package-lock.json  package.json  render.yaml  replay_log.py  repo_structure.json  requirements.txt  tsconfig.json  vercel.json  vite.config.ts
backend/: .env.example  .env.supabase.example  README.md  __init__.py  alembic.ini  chunker.py  db.py  embeddings.py  explain.py  gh_fetch.py  graph_builder.py  ingestion.py  js_extractor.py  lesson_generator.py  llm_client.py  logger.py  md_extractor.py  mermaid.py  pyproject.toml  python_extractor.py  quiz_eval.py  quiz_generator.py  requirements.txt  retrieval.py  test_ollama.py  tmp_path_normalization_response.json  tmp_safe_zip_response.json  tmp_unsafe_zip_response.json  tmp_upload_exe.json  tmp_upload_ok.json  tmp_walk_code_analysis_response.json  tmp_walk_zip_response.json  utils.py  vis_builder.py
backend/Reponium_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/docs/: POSTGRESQL_MIGRATION_PATH.md
backend/migrations/: 0001_initial_schema.sql  README.md  env.py
backend/repoorover_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/scripts/: file_ops_smoke_test.py  ollama_repo_summary_smoke.py
backend/tests/: conftest.py  test_ai_project_summaries_route.py  test_ast_parser_fallback.py  test_cache_service.py  test_graph_primitives.py  test_llm_health_route.py  test_ollama_repo_summary.py  test_parsing_primitives.py  test_project_summary_service.py
(+259 files in other folders)
