[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Reponium-backend"
version = "0.1.0"
description = "Reponium AI FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "aiosqlite>=0.20.0",
  "openai>=1.51.0",
  "google-genai>=1.42.0",
  "google-generativeai>=0.8.3",
]

[tool.setuptools]
packages = ["app"]
